# Fermento

./: .gitignore  .prettierignore  Cargo.toml  README-WIZARD.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  setup.sh  tsconfig.app.json  vite.config.ts
.husky/: pre-commit
api/: _auth.ts  _db.ts  login.ts  signup.ts
api/roles/: grant-minter.ts
contracts/non_fungible/: Cargo.toml
contracts/non_fungible/src/: contract.rs  test.rs
contracts/non_fungible/test_snapshots/test/: initial_state.1.json
my-project/: Cargo.toml  package-lock.json  package.json
my-project/.husky/: pre-commit
my-project/contracts/fungible-token-interface/test_snapshots/test/: burn_fails_when_paused.1.json  transfer_fails_when_paused.1.json  transfer_from_fails_when_paused.1.json
src/: App.tsx  index.css
src/components/: AuthPanel.tsx
src/contracts/: client.ts
src/hooks/: useAuth.ts
src/pages/: Catalogue.tsx  Home.tsx
